--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,4 @@ RewriteEngine On
 
 RewriteRule ^(controllers/|models/|views/|base/|mollie/) - [F,L,NC]
 
-
-RewriteRule ^(.+)/ index.php?controller=$1
+RewriteRule . index.php
