--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 
 
-RewriteRule ^(controllers/|models/|views/|base/|mollie/) - [F,L,NC]
+RewriteRule ^(controllers/|models/|views/|base/) - [F,L,NC]
 
 RewriteRule . index.php
